[package]
name = "visualize"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for standardizing visualizations of data structures"
repository = "https://github.com/richardanaya/visualize"
readme = "README.md"
categories = ["science", "development-tools", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
